fix(nav): anchor should not wrap

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -81,6 +81,7 @@ ul {
   a {
     width: 100%;
     display: block;
+    white-space: nowrap
   }
 
   .label {
